force-app/main/default/objects/Reltio_Field_Mapping__mdt/Reltio_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Reltio Field Mapping</label>
    <pluralLabel>Reltio Field Mapping</pluralLabel>
</CustomObject>