force-app/main/default/objects/Reltio_Field_Mapping__mdt/fields/Reltio_CM_Process__c.field-meta.xml
<CustomField>
    <fullName>Reltio_CM_Process__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Lookup to Reltio CM Inbound Process</description>
    <label>Reltio CM Process</label>
    <referenceTo>Reltio_CM_Process__mdt</referenceTo>
    <relationshipLabel>Reltio Field Mapping</relationshipLabel>
    <relationshipName>Reltio_Field_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>