force-app/main/default/objects/Reltio_Field_Mapping__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Source Field</description>
    <inlineHelpText>Source Field</inlineHelpText>
    <label>Source Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>