force-app/main/default/objects/Reltio_Field_Mapping__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Source Object</description>
    <inlineHelpText>Source Object</inlineHelpText>
    <label>Source Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master</fullName>
                <default>true</default>
                <label>Master</label>
            </value>
            <value>
                <fullName>EInvoice</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SocialMedia</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Roles</fullName>
            </value>
            <value>
                <fullName>LineOfBusiness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>