force-app/main/default/objects/Reltio_Field_Mapping__mdt/fields/Source_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Source_Parameter__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Source Parameter</description>
    <inlineHelpText>Source Parameter</inlineHelpText>
    <label>Source Parameter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>value</fullName>
                <default>true</default>
                <label>value</label>
            </value>
            <value>
                <fullName>uri</fullName>
            </value>
            <value>
                <fullName>lookupCode</fullName>
            </value>
            <value>
                <fullName>mdmId</fullName>
            </value>
            <value>
                <fullName>startObjectDetails</fullName>
            </value>
            <value>
                <fullName>endObjectDetails</fullName>
            </value>
            <value>
                <fullName>updatedTime</fullName>
            </value>
            <value>
                <fullName>type</fullName>
            </value>
            <value>
                <fullName>objectType</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>