force-app/main/default/objects/Reltio_Field_Mapping__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Target Field</description>
    <inlineHelpText>Target Field</inlineHelpText>
    <label>Target Field</label>
    <metadataRelationshipControllingField>Reltio_Field_Mapping__mdt.Target_Object__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>Reltio_Field_Mapping</relationshipLabel>
    <relationshipName>Reltio_Field_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>