force-app/main/default/objects/Reltio_Field_Mapping__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Target object to consider</description>
    <label>Target Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Reltio_Field_Mapping</relationshipLabel>
    <relationshipName>Reltio_Field_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>