force-app/main/default/objects/Reltio_Field_Mapping__mdt/listViews/HCP.listView-meta.xml
<ListView>
    <fullName>HCP</fullName>
    <columns>Reltio_CM_Process__c</columns>
    <columns>MasterLabel</columns>
    <columns>Source_Object__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Source_Parameter__c</columns>
    <columns>Target_Object__c</columns>
    <columns>Target_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reltio_CM_Process__c</field>
        <operation>equals</operation>
        <value>ReltioHCPService</value>
    </filters>
    <label>HCP</label>
</ListView>