force-app/main/default/objects/Reltio_Field_Mapping__mdt/listViews/HCPHCO.listView-meta.xml
<ListView>
    <fullName>HCPHCO</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Target_Object__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Source_Parameter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reltio_CM_Process__c</field>
        <operation>equals</operation>
        <value>ReltioHCPHCOService</value>
    </filters>
    <label>HCPHCO</label>
</ListView>